--- a/index.html
+++ b/index.html
@@ -12,12 +12,17 @@
     <script type="module" src="script.js"></script>
   </head>
   <body>
-    <nav>
-      <a href="/" aria-current="page">Home</a>
-      <a href="/page2.html">Other page</a>
-    </nav>
+    <header>
+
+    </header>
     <main>
-      <h1>Home page</h1>
+      <h1>Velkommen</h1>
+      <h2>til</h2>
+      <h3>nettsiden!</h3>
+      <p>Mitt navn er Thomas og jeg går på kodeloftet</p>
     </main>
+    <footer>
+
+    </footer>
   </body>
 </html>
