--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
       <!-- All hoved innhold -->
       <section>
         <h1>Velkommen</h1>
+        <h3>introduksjon</h3>
         <p>Mitt navn er Thomas og jeg går på kodeloftet. Dette er min første nettside, og er en test for å se hvordan HTML fungerer</p>
       </section>
 
@@ -32,16 +33,18 @@
         <p>Jeg er fra Bergen, og har alltid bod her. Jeg er 19 år gammel og liker å spille DND med vennene mine i helgene.</p>
         <h3>Favoritt spill</h3>
           <ul>
-            <li>Ghost of tsushima</li> <img src="Photos/game photo.jpg" alt="bilde av spill" width="10%">
+            <li>Ghost of tsushima</li> <img src="Photos/Samurai-photo.jpg" alt="bilde av spillet" width="10%">
             <p>Ghost of tsushima er et spill om en samurai som legger fra seg sin ære, for å kunne redde folket sitt fra den mongolske invasjonen.</p>
-            <li>Red dead redemtion</li> <img src="Photos/game photo.jpg" alt="Bilde av spil" width="10%">
-            <li>League of legends</li> <img src="Photos/game photo.jpg" alt="Bilde av spill" width="10%">
+            <li>Red dead redemtion</li> <img src="Photos/Cowboy-photo.jpg" alt="Bilde av spillet" width="10%">
+            <p>Red dead redemtion handler om en gjeng cowboys som kjemper for penger, hevn og frihet</p>
+            <li>Baldurs gate 3</li> <img src="Photos/Knight-photo.jpg" alt="Bilde av spillet" width="10%">
+            <p>Baldurs gate 3 er et spill som tar sterk inspirasjon fra DND for å gi spillere et unikt eventyr i en verden full av blandt annet magi, monstre og demoner</p>
           </ul>
       </section>
 
       <section>
         <h2>Om mine prosjekter</h2>
-        <p>Dette er mitt første av flere prosjekter, og ble laget i stackblitz.</p>
+        <p>Dette er mitt første av flere prosjekter, og ble laget i stackblitz</p>
       </section>
 
     </main>
