--- a/index.html
+++ b/index.html
@@ -28,16 +28,16 @@
 
       <section>
         <h2>Om meg</h2>
-        <img src="Photos/Mountain photo.jpg" alt="Spiss fjell" width="30%">
-        <img src="Photos/Bergen photo.jpg" alt="bilde av bergen" width="30%">
+        <img src="Photos/Mountain photo.jpg" alt="Spiss fjell" width="400px">
+        <img src="Photos/Bergen photo.jpg" alt="bilde av bergen" width="400px">
         <p>Jeg er fra Bergen, og har alltid bod her. Jeg er 19 år gammel og liker å spille DND med vennene mine i helgene.</p>
         <h3>Favoritt spill</h3>
           <ul>
-            <li>Ghost of tsushima</li> <img src="Photos/Samurai-photo.jpg" alt="bilde av spillet" width="10%">
+            <li>Ghost of tsushima</li> <img src="Photos/Samurai-photo.jpg" alt="bilde av spillet" width="200px">
             <p>Ghost of tsushima er et spill om en samurai som legger fra seg sin ære, for å kunne redde folket sitt fra den mongolske invasjonen.</p>
-            <li>Red dead redemtion</li> <img src="Photos/Cowboy-photo.jpg" alt="Bilde av spillet" width="10%">
+            <li>Red dead redemtion</li> <img src="Photos/Cowboy-photo.jpg" alt="Bilde av spillet" width="200px">
             <p>Red dead redemtion handler om en gjeng cowboys som kjemper for penger, hevn og frihet</p>
-            <li>Baldurs gate 3</li> <img src="Photos/Knight-photo.jpg" alt="Bilde av spillet" width="10%">
+            <li>Baldurs gate 3</li> <img src="Photos/Knight-photo.jpg" alt="Bilde av spillet" width="200px">
             <p>Baldurs gate 3 er et spill som tar sterk inspirasjon fra DND for å gi spillere et unikt eventyr i en verden full av blandt annet magi, monstre og demoner</p>
           </ul>
       </section>
