--- a/index.html
+++ b/index.html
@@ -12,16 +12,16 @@
       <!-- Logo, bedriftnavn, navigasjon på siden -->
       <nav>
         <ul>
-          <li>Hjem</li>
+          <li>introduksjon</li>
           <li>Om meg</li>
-          <li>Prosjekter</li>
+          <li>Om mine prosjekter</li>
         </ul>
       </nav>
     </header>
     <main>
       <!-- All hoved innhold -->
       <section>
-        <h1>Velkommen</h1>
+        <h1>Mitt første HTML prosjekt</h1>
         <h3>introduksjon</h3>
         <p>Mitt navn er Thomas og jeg går på kodeloftet. Dette er min første nettside, og er en test for å se hvordan HTML fungerer</p>
       </section>
