--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
   <body>
     <header>
       <nav>
-        <ul>
-          <li class="HeadingList">introduksjon</li>
-          <li class="HeadingList">Om meg</li>
-          <li class="HeadingList">Om mine prosjekter</li>
+        <ul id="headinglist">
+          <li>introduksjon</li>
+          <li>Om meg</li>
+          <li>Om mine prosjekter</li>
         </ul>
       </nav>
     </header>
