--- a/index.html
+++ b/index.html
@@ -12,43 +12,45 @@
     <header>
       <nav>
         <ul id="headinglist">
-          <li>introduksjon</li>
-          <li>Om meg</li>
-          <li>Om mine prosjekter</li>
+          <li class="navigation-button">Introduksjon</li>
+          <li class="navigation-button">Om mine prosjekter</li>
         </ul>
       </nav>
     </header>
-
     <main>
-      <section>
-        <h1>Mitt første HTML prosjekt</h1>
-        <h3>introduksjon</h3>
-        <p>Mitt navn er Thomas og jeg går på kodeloftet. Dette er min første nettside, og er en test for å se hvordan HTML og CSS fungerer</p>
-      </section>
-      
-      <section>
-        <h2>Om meg</h2>
-        <!-- husk bilder -->
-        <p>Jeg er fra Bergen, og har alltid bod her. Jeg er 19 år gammel og liker å spille DND med vennene mine i helgene.</p>
-        <h3>Favoritt spill</h3>
-          <ul id="GamesList">
-            <li>Ghost of tsushima</li> <img src="Photos/Samurai-photo.jpg" alt="bilde av spillet" width="200px">
-            <p>Ghost of tsushima er et spill om en samurai som legger fra seg sin ære, for å kunne redde folket sitt fra den mongolske invasjonen.</p>
-            <li>Red dead redemtion</li> <img src="Photos/Cowboy-photo.jpg" alt="Bilde av spillet" width="200px">
-            <p>Red dead redemtion handler om en gjeng cowboys som kjemper for penger, hevn og frihet</p>
-            <li>Baldurs gate 3</li> <img src="Photos/Knight-photo.jpg" alt="Bilde av spillet" width="200px">
-            <p>Baldurs gate 3 er et spill som tar sterk inspirasjon fra DND for å gi spillere et unikt eventyr i en verden full av blandt annet magi, monstre og demoner</p>
-          </ul>
+      <section id="headline">
+        <h1>Thomas Hovland</h1>
+        <p>Elev på Kodeloftet</p>
       </section>
 
-      <section>
-        <h2>Om mine prosjekter</h2>
-        <p>Dette er mitt første av flere prosjekter, og ble laget i stackblitz</p>
+      <section class="project-cards">
+        <div class="card">
+          <div class="card-content">
+            <div class="card-text">
+            <h2>prosjekt 1</h2> 
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vitae numquam deserunt minima fuga ipsam sint quidem vel fugit earum recusandae nesciunt necessitatibus, maxime delectus et, officia nisi modi dolorum doloremque.</p>
+            <a href="">Visit the project</a>
+            </div>
+            <img src="Photos/Bergen photo.jpg" alt="" width="60%">
+          </div>
+        </div>
+        <div class="card">
+          <h2>prosjekt 2</h2>
+        </div>
+        <div class="card">
+          <h2>prosjekt 3</h2>
+        </div>
+        <div class="card">
+          <h2>prosjekt 4</h2>
+        </div>
       </section>
     </main>
-
     <footer>
-      <h3>Laget av Thomas</h3>
+      <h2>Kontakt info</h2>
+      <nav>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Facere, ut.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat, fugiat?</p>
+      </nav>
     </footer>
   </body>
 </html>
