--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vitae numquam deserunt minima fuga ipsam sint quidem vel fugit earum recusandae nesciunt necessitatibus, maxime delectus et, officia nisi modi dolorum doloremque.</p>
             <a href="">Visit the project</a>
             </div>
-            <img src="Photos/Bergen photo.jpg" alt="" width="60%">
+            <img class="card-img" src="Photos/Bergen photo.jpg" alt="" width="60%">
           </div>
         </div>
         <div class="card">
